# android-demo-app

./: .gitignore  CONTRIBUTING.md  Lai  README.md
ASLRecognition/: README.md  settings.gradle
ASLRecognition/app/: build.gradle
ASLRecognition/scripts/: cnn_models.py  convert_lite.py  create_csv.py  preprocess_image.py  test.py  train.py
D2Go/: .gitignore  README.md  build.gradle  create_d2go.py  gradle.properties  settings.gradle
Detectron2Go/: README.md  create_d2go.py  create_model.py  settings.gradle
HelloWorldApp/: README.md  build.gradle  requirements.txt  settings.gradle  trace_model.py
HelloWorldApp/app/: build.gradle
ImageSegmentation/: README.md  deeplabv3.py
NativeApp/: make_warp_perspective_pt.py
NativeApp/app/: CMakeLists.txt  build.gradle
NativeApp/app/src/main/: AndroidManifest.xml
NativeApp/app/src/main/cpp/: pytorch_nativeapp.cpp
NativeApp/app/src/main/java/org/pytorch/nativeapp/: MainActivity.java  NativeClient.java
ObjectDetection/: README.md  build.gradle  settings.gradle
PyTorchDemoApp/: README.md  build.gradle  settings.gradle  项目.md
QuestionAnswering/: README.md  build.gradle  convert_distilbert_qa.py  settings.gradle
Seq2SeqNMT/: README.md  build.gradle  seq2seq_nmt.py  settings.gradle
SpeechRecognition/: README.md  build.gradle  create_wav2vec2.py  settings.gradle
StreamingASR/: CMakeLists.txt  README.md  generate_ts.py  run_sasr.py  save_model_for_mobile.py  spm_bpe_4096_fairseq.dict
TorchVideo/: README.md  build_model.py  settings.gradle
ViT4MNIST/: README.md  convert_deit.py  mnist_vit.py  settings.gradle
(+286 files in other folders)
